# all4one

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  audit.toml  test-results-20260508-165340.json  test-results-20260508-165752.json  test-results-20260508-170406.json  test-results-20260508-170726.json
.github/agents/: execution-governor.agent.md
.github/workflows/: ci.yml  release.yml
agent/: Cargo.toml  build.rs
agent/proto/: agent.proto  raft.proto
agent/src/: lib.rs  main.rs
agent/src/api_rest/: dashboard.html  mod.rs
agent/src/certificates/: mod.rs
agent/src/config/: mod.rs  schema.rs
agent/src/discovery/: mod.rs
agent/src/executor/: mod.rs
agent/src/gossip/: mod.rs
agent/src/grpc_client/: mod.rs
agent/src/grpc_server/: mod.rs  raft_service.rs
agent/src/node/: mod.rs
agent/src/raft/: commands.rs  mod.rs  network.rs  store.rs
agent/src/scheduler/: mod.rs
agent/src/shared_volume/: mod.rs
agent/src/storage/: chunks.rs  index.rs  mod.rs  placement.rs
agent/tests/: integration_phase2.rs
common/: Cargo.toml
common/src/: job.rs  lib.rs  node.rs  types.rs
deploy/compose/: .env.release.example  Dockerfile  Dockerfile.release  README.md  docker-compose.phase2.yml  docker-compose.release.yml  docker-compose.yml
deploy/compose/configs/: agent-a-phase2.toml  agent-a.toml  agent-b-phase2.toml  agent-b.toml  agent-c-phase2.toml  agent-steam-deck.toml  agent-win-local-bootstrap-peerseed.toml  agent-win-local-peer.toml  agent-win-local.toml
deploy/compose/examples/phase1-fire-test/agent-a/: 01-nginx-config.yaml  02-postgres-version.yaml  03-pi-leibniz-python.yaml  10-monte-carlo-pi-python.yaml
deploy/compose/examples/phase1-fire-test/agent-b/: 04-redis-version.yaml  05-node-smoke.yaml  06-batch-transform-python.yaml
deploy/compose/examples/phase1-fire-test/agent-c/: 07-prime-count-executable.yaml  08-sha256-stream-executable.yaml  09-log-parser-executable.yaml
docs/api/: config-reference.md  job-spec.md  rest-api.md
docs/architecture/: agent.md  ai-inference.md  lifecycle.md  networking.md  overview.md  scheduler.md  storage.md
docs/decisions/: 001-rust-agent.md  002-no-central-node.md  003-no-minio.md  004-llama-cpp-rpc.md  005-grpc-internal.md  006-pki-mtls.md
docs/guides/: getting-started.md  node-setup.md
docs/phases/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
hooks/: README.md  pre-push
scripts/: autoinstall.sh  check-env.sh  install-root-deps-steamos.sh  phase1-fire-test.ps1  phase1-mixed-experiment.ps1  phase2-storage-test.ps1  phase3-failure-sim.ps1  phase3-ops-ui-check.ps1
