[workspace]
members = ["common", "agent"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["All4One"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
