[package]
name = "all4one-agent"
version = "0.1.7"
edition = "2021"

[dependencies]
all4one-common = { path = "../common" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
prost = "0.14"
libc = "0.2"
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
sled = "0.34"
rcgen = { version = "0.13", features = ["pem"] }
rustls = { version = "0.23", features = ["std"] }
tokio-rustls = "0.26"
reed-solomon = "0.2"
zstd = "0.13"
sha2 = "0.10"
base64 = "0.22"
rustls-pki-types = { version = "1", features = ["std"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3"
