[package]
name = "all4one-common"
version = "0.1.9"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
